--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: golang-classic-example
-base: core20
+base: core22
 version: '0.1'
 summary: An example snap for a classic confinement golang project
 description: |
@@ -15,7 +15,10 @@ apps:
 
 parts:
   golang-classic-example:
-    build-snaps: [go]
-    build-packages: [pkg-config, libzstd-dev]
     plugin: go
     source: .
+    build-snaps: [go]
+    build-packages: [pkg-config, libzstd-dev]
+    build-environment:
+      - CGO_ENABLED: 1
+      - CGO_LDFLAGS_ALLOW: ".*"
